--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,53 +7,136 @@
     android:theme="@style/ThemeOverlay.Oevview.FullscreenContainer"
     tools:context=".MainActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <TextView
+    <LinearLayout
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="?attr/fullscreenTextColor"
-        android:textSize="50sp"
-        android:textStyle="bold" />
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="@style/Widget.Theme.Oevview.ButtonBar.Fullscreen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <Button
-                android:id="@+id/dummy_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:id="@+id/display_url_a"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:onClick="display"
+                android:text="Display" />
 
+            <EditText
+                android:id="@+id/url_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="right"
+                android:inputType="textUri"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/display_url_b"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:onClick="display"
+                android:text="Display" />
+
+            <EditText
+                android:id="@+id/url_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="right"
+                android:inputType="textUri"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/display_url_c"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:onClick="display"
+                android:text="Display" />
+
+            <EditText
+                android:id="@+id/url_c"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="right"
+                android:inputType="textUri"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/display_url_d"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:onClick="display"
+                android:text="Display" />
+
+            <EditText
+                android:id="@+id/url_d"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="right"
+                android:inputType="textUri"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/display_url_e"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:onClick="display"
+                android:text="Display" />
+
+            <EditText
+                android:id="@+id/url_e"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="right"
+                android:inputType="textUri"
+                android:text="" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/display"
-            android:layout_width="112dp"
-            android:layout_height="62dp"
-            android:onClick="display"
-            android:text="Display" />
+            android:id="@+id/reset"
+            android:layout_width="128dp"
+            android:layout_height="64dp"
+            android:onClick="reset"
+            android:text="Reset" />
 
-    </FrameLayout>
+    </LinearLayout>
 
 </FrameLayout>
